align format to native

--- a/MMM-LICE.css
+++ b/MMM-LICE.css
@@ -4,9 +4,10 @@
  * Pick your color, copy and paste the HEX number. Example - #62FF00 = bright green.
  */
 
+/*
 .MMM-LICE .header {
   color: #33FFFD;               /* Header color. Default is white. */
-}
+}*/
 
 .MMM-LICE .timestamp {
   color: #FFFFFF;               /* timestamp color. Default is white. */
